NEW 186093
For <video> element, use video fullscreen instead of element fullscreen.
https://bugs.webkit.org/show_bug.cgi?id=186093
Summary For <video> element, use video fullscreen instead of element fullscreen.
Jeremy Jones
Reported 2018-05-30 07:30:18 PDT
Enable video controls when in element fullscreen.
Attachments
Patch (1.96 KB, patch)
2018-05-30 07:33 PDT, Jeremy Jones
no flags
Patch (3.18 KB, patch)
2018-05-30 15:06 PDT, Jeremy Jones
no flags
Patch (3.18 KB, patch)
2018-06-28 11:26 PDT, Jeremy Jones
no flags
Patch (3.20 KB, patch)
2018-06-28 11:46 PDT, Jeremy Jones
jer.noble: review+
ews-watchlist: commit-queue-
Archive of layout-test-results from ews204 for win-future (12.87 MB, application/zip)
2018-06-28 13:42 PDT, EWS Watchlist
no flags
Patch for landing. (2.92 KB, patch)
2018-07-06 16:00 PDT, Jeremy Jones
ews-watchlist: commit-queue-
Archive of layout-test-results from ews205 for win-future (12.88 MB, application/zip)
2018-07-06 18:31 PDT, EWS Watchlist
no flags
Jeremy Jones
Comment 1 2018-05-30 07:30:59 PDT
Jeremy Jones
Comment 2 2018-05-30 07:33:21 PDT
Jeremy Jones
Comment 3 2018-05-30 15:06:16 PDT
Antoine Quint
Comment 4 2018-05-31 00:21:24 PDT
Comment on attachment 341606 [details] Patch View in context: https://bugs.webkit.org/attachment.cgi?id=341606&action=review > Source/WebCore/html/HTMLVideoElement.cpp:198 > + document().addConsoleMessage(MessageSource::Media, MessageLevel::Debug, ASCIILiteral("For video element use webkitSetPresentationMode('Fullscreen') instead of webkitRequestFullscreen().")); I'm not sure this is the right message. Is setPresentationMode on a standard track somewhere? If it's not, it would be ill-advised to recommend its use vs. a method that is on the standards track, albeit with a webkit prefix. Also, <video> instead of "video" would be preferable.
Jeremy Jones
Comment 5 2018-06-28 11:26:05 PDT
Jeremy Jones
Comment 6 2018-06-28 11:26:34 PDT
(In reply to Antoine Quint from comment #4) > Comment on attachment 341606 [details] > Patch > > View in context: > https://bugs.webkit.org/attachment.cgi?id=341606&action=review > > > Source/WebCore/html/HTMLVideoElement.cpp:198 > > + document().addConsoleMessage(MessageSource::Media, MessageLevel::Debug, ASCIILiteral("For video element use webkitSetPresentationMode('Fullscreen') instead of webkitRequestFullscreen().")); > > I'm not sure this is the right message. Is setPresentationMode on a standard > track somewhere? If it's not, it would be ill-advised to recommend its use > vs. a method that is on the standards track, albeit with a webkit prefix. > Also, <video> instead of "video" would be preferable. changed "video" to "<video>"
Jeremy Jones
Comment 7 2018-06-28 11:46:34 PDT
EWS Watchlist
Comment 8 2018-06-28 13:42:37 PDT
Comment on attachment 343823 [details] Patch Attachment 343823 [details] did not pass win-ews (win): Output: https://webkit-queues.webkit.org/results/8372693 New failing tests: http/tests/security/video-poster-cross-origin-crash2.html
EWS Watchlist
Comment 9 2018-06-28 13:42:48 PDT
Created attachment 343843 [details] Archive of layout-test-results from ews204 for win-future The attached test failures were seen while running run-webkit-tests on the win-ews. Bot: ews204 Port: win-future Platform: CYGWIN_NT-6.1-2.9.0-0.318-5-3-x86_64-64bit
Jer Noble
Comment 10 2018-06-28 14:17:23 PDT
Comment on attachment 343823 [details] Patch View in context: https://bugs.webkit.org/attachment.cgi?id=343823&action=review > Source/WebCore/html/HTMLVideoElement.cpp:198 > + document().addConsoleMessage(MessageSource::Media, MessageLevel::Debug, "For <video> element use webkitSetPresentationMode('Fullscreen') instead of webkitRequestFullscreen()."_s); Nit -> "Fullscreen" should be "fullscreen". We should probably make this non-imperative. Like, "For <video> element use, webkitRequestFullscreen() will use webkitSetPresentationMode('Fullscreen')".
Jeremy Jones
Comment 11 2018-07-06 16:00:22 PDT
Created attachment 344473 [details] Patch for landing.
WebKit Commit Bot
Comment 12 2018-07-06 16:47:23 PDT
The commit-queue encountered the following flaky tests while processing attachment 344473 [details]: media/media-fullscreen-loop-inline.html bug 187424 (author: jeremyj-wk@apple.com) The commit-queue is continuing to process your patch.
WebKit Commit Bot
Comment 13 2018-07-06 16:47:34 PDT
The commit-queue encountered the following flaky tests while processing attachment 344473 [details]: media/media-fullscreen-return-to-inline.html bug 187387 (authors: graouts@apple.com, mcatanzaro@igalia.com, and ryanhaddad@apple.com) The commit-queue is continuing to process your patch.
WebKit Commit Bot
Comment 14 2018-07-06 17:15:33 PDT
Comment on attachment 344473 [details] Patch for landing. Clearing flags on attachment: 344473 Committed r233605: <https://trac.webkit.org/changeset/233605>
EWS Watchlist
Comment 15 2018-07-06 18:30:58 PDT
Comment on attachment 344473 [details] Patch for landing. Attachment 344473 [details] did not pass win-ews (win): Output: https://webkit-queues.webkit.org/results/8462274 New failing tests: http/tests/security/canvas-remote-read-remote-video-blocked-no-crossorigin.html
EWS Watchlist
Comment 16 2018-07-06 18:31:10 PDT
Created attachment 344497 [details] Archive of layout-test-results from ews205 for win-future The attached test failures were seen while running run-webkit-tests on the win-ews. Bot: ews205 Port: win-future Platform: CYGWIN_NT-6.1-2.9.0-0.318-5-3-x86_64-64bit
Note You need to log in before you can comment on or make changes to this bug.