For <video> element, use video fullscreen instead of element fullscreen. https://bugs.webkit.org/show_bug.cgi?id=186093 rdar://problem/40144751

Patch by Jeremy Jones <jeremyj@apple.com> on 2018-07-06
Reviewed by Jer Noble.

Some pages use webkitRequestFullscreen directly on the video element, without any custom controls.
This will prevent native fullscreeen presentation mode conrols from being used.

This change makes webkitRequestFullscreen on a video element call webKitSetPresentationMode.

* dom/Element.h:
* html/HTMLVideoElement.cpp:
(WebCore::HTMLVideoElement::webkitRequestFullscreen):
* html/HTMLVideoElement.h:

Canonical link: https://commits.webkit.org/202673@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@233605 268f45cc-cd09-0410-ab3c-d52691b4dbfc