Source/WebCore/html/HTMLVideoElement.h
@@ -61,6 +61,10 @@ public:
     unsigned webkitDroppedFrameCount() const;
 #endif
 
+#if ENABLE(FULLSCREEN_API) && PLATFORM(IOS)
+    void webkitRequestFullscreen() override;
+#endif
+
     // Used by canvas to gain raw pixel access
     void paintCurrentFrameInContext(GraphicsContext&, const FloatRect&);
 
